# IRIS

./: .gitignore  README.md  install.sh  pyproject.toml  scratch_holehe.py  test_email.py
iris/: cli.py
iris/api_clients/: github.py  gravatar.py  holehe_client.py  hunter.py  sherlock_client.py
iris/collectors/: domain.py  email.py  network.py  username.py
iris/db/: cache.py  models.py
tests/: test_collectors.py
